--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Edtech site</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -18,7 +19,7 @@
       <!-- navbar start -->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Edu Tech</a>
 
           <button
             class="navbar-toggler"
@@ -68,14 +69,14 @@
       <!-- carousel start -->
       <section>
         <div
-          id="carouselExampleIndicators"
+          id="carouselExampleCaptions"
           class="carousel slide"
-          data-bs-ride="true"
+          data-bs-ride="false"
         >
           <div class="carousel-indicators">
             <button
               type="button"
-              data-bs-target="#carouselExampleIndicators"
+              data-bs-target="#carouselExampleCaptions"
               data-bs-slide-to="0"
               class="active"
               aria-current="true"
@@ -83,32 +84,104 @@
             ></button>
             <button
               type="button"
-              data-bs-target="#carouselExampleIndicators"
+              data-bs-target="#carouselExampleCaptions"
               data-bs-slide-to="1"
               aria-label="Slide 2"
             ></button>
             <button
               type="button"
-              data-bs-target="#carouselExampleIndicators"
+              data-bs-target="#carouselExampleCaptions"
               data-bs-slide-to="2"
               aria-label="Slide 3"
             ></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="..." />
+              <img
+                src="images/cover/cover-2.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <div>
+                  <h2 class="display-1">Get Started Digital Learning</h2>
+                </div>
+                <div>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                    Some representative placeholder content for the first slide.
+                    Some representative placeholder content for the first slide.
+                  </p>
+                </div>
+                <div>
+                  <button
+                    class="btn btn-outline-primary text-white bg-primary border border-primary me-2"
+                    type="button"
+                  >
+                    Get Started
+                  </button>
+                </div>
+              </div>
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
+              <img
+                src="images/cover/cover-1.png"
+                class="d-block w-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <div>
+                  <h2 class="display-1">Get Started Digital Learning</h2>
+                </div>
+                <div>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                    Some representative placeholder content for the first slide.
+                    Some representative placeholder content for the first slide.
+                  </p>
+                </div>
+                <div>
+                  <button
+                    class="btn btn-outline-primary text-white bg-primary border border-primary me-2"
+                    type="button"
+                  >
+                    Get Started
+                  </button>
+                </div>
+              </div>
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
+              <img
+                src="images/cover/cover-3.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <div>
+                  <h2 class="display-1">Get Started Digital Learning</h2>
+                </div>
+                <div>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                    Some representative placeholder content for the first slide.
+                    Some representative placeholder content for the first slide.
+                  </p>
+                </div>
+                <div>
+                  <button
+                    class="btn btn-outline-primary text-white bg-primary border border-primary me-2"
+                    type="button"
+                  >
+                    Get Started
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
           <button
             class="carousel-control-prev"
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -117,7 +190,7 @@
           <button
             class="carousel-control-next"
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#carouselExampleCaptions"
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
