--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- header part -->
-    <header class="container">
+    <header class="container mb-5">
       <!-- navbar start -->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -200,6 +200,355 @@
       </section>
     </header>
     <!-- header part end -->
+    <main>
+      <!-- card iteam part start -->
+      <section>
+        <div class="container d-grid mb-5">
+          <h2 class="d-flex justify-content-center">
+            Discover Our Popular Courses
+          </h2>
+          <p class="d-flex justify-content-center">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout
+          </p>
+        </div>
+        <div class="container d-lg-flex justify-content-between">
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="images/course/course-1.png"
+                  class="img-fluid rounded-start card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card
+                  </p>
+                  <p class="card-text">
+                    <small class="text-primary fw-bold">Price : 20$</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="images/course/course-2.png"
+                  class="img-fluid rounded-start card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Javascript Basic to advanced</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-primary fw-bold">Price : 25$</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container d-lg-flex justify-content-between">
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="images/course/course-3.png"
+                  class="img-fluid rounded-start card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Fullstack Web Development</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-primary fw-bold">Price : 15$</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="images/course/course-4.png"
+                  class="img-fluid rounded-start card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Digital Marketing</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-primary fw-bold">Price : 30$</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container d-lg-flex justify-content-between mb-5">
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="images/course/course-5.png"
+                  class="img-fluid rounded-start card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Photography Basic Rules</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-primary fw-bold">Price : 25$</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="images/course/course-6.png"
+                  class="img-fluid rounded-start card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Motion Graphics</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-primary fw-bold">Price : 20$</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container d-grid justify-content-center mb-5">
+          <button
+            class="btn btn-outline-primary text-white bg-primary border border-primary me-2"
+            type="button"
+          >
+            See More Courses
+          </button>
+        </div>
+      </section>
+      <!-- another section card -->
+      <section class="container">
+        <div
+          class="d-flex justify-content-evenly align-items-center bg-primary rounded pt-5 pb-5 mb-5"
+        >
+          <div>
+            <h1 class="text-white">Ready to Join</h1>
+            <p class="text-white">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+          <div>
+            <button
+              class="btn btn-outline-primary text-white bg-primary border border-White me-2"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+              type="button"
+            >
+              Register Now
+            </button>
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Learn</h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">Fullstack Web Development</div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                      Save changes
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- accordion frequently asked questions -->
+      <section class="container mb-5">
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne"
+                aria-expanded="false"
+                aria-controls="flush-collapseOne"
+              >
+                Difference between Grid and Flex.
+              </button>
+            </h2>
+            <div
+              id="flush-collapseOne"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <span class="fw-bold">Grid</span> Layout, is a two-dimensional
+                grid-based layout system with rows and columns, making it easier
+                to design web pages without having to use floats and
+                positioning. Like tables, grid layout allow us to align elements
+                into columns and rows.
+                <br />
+                <span class="fw-bold">Flexbox</span> offers a one-dimensional
+                layout. It is helpful in allocating and aligning the space among
+                items in a container (made of grids). It works with all kinds of
+                display devices and screen sizes.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo"
+                aria-expanded="false"
+                aria-controls="flush-collapseTwo"
+              >
+                Difference between Tailwind CSS and Bootstrap.
+              </button>
+            </h2>
+            <div
+              id="flush-collapseTwo"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingTwo"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <span class="fw-bold">Tailwind</span> offers predesigned widgets
+                to build a site from scratch with fast UI development.
+                <br />
+                <span class="fw-bold">Bootstrap</span> comes with a set of
+                pre-styled responsive, mobile-first components that possess a
+                definite UI kit.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree"
+                aria-expanded="false"
+                aria-controls="flush-collapseThree"
+              >
+                what is css box model.
+              </button>
+            </h2>
+            <div
+              id="flush-collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingThree"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                The <span class="fw-bold">CSS box model</span> is a container
+                that contains multiple properties including borders, margin,
+                padding, and the content itself. It is used to create the design
+                and layout of web pages.It can be used as a toolkit for
+                customizing the layout of different elements. The web browser
+                renders every element as a rectangular box according to the CSS
+                box model.Box-Model has multiple properties in CSS.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingfour">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapsefour"
+                aria-expanded="false"
+                aria-controls="flush-collapsefour"
+              >
+                what is sementic tag?
+              </button>
+            </h2>
+            <div
+              id="flush-collapsefour"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingfour"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                The HTML <span class="fw-bold">semantics</span> refers to the
+                tags that provide meaning to an HTML page rather than just
+                presentation. It makes HTML more comprehensible by better
+                defining the different sections and layout of web pages.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
