--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
                 class="d-block w-100"
                 alt="..."
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <div>
-                  <h2 class="display-1">Get Started Digital Learning</h2>
+                  <h2 class="display-1 fw-bold">
+                    Get Started Digital Learning
+                  </h2>
                 </div>
                 <div>
                   <p>
@@ -129,9 +131,11 @@
                 class="d-block w-100"
                 alt="..."
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <div>
-                  <h2 class="display-1">Get Started Digital Learning</h2>
+                  <h2 class="display-1 fw-bold">
+                    Get Started Digital Learning
+                  </h2>
                 </div>
                 <div>
                   <p>
@@ -156,9 +160,11 @@
                 class="d-block w-100"
                 alt="..."
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <div>
-                  <h2 class="display-1">Get Started Digital Learning</h2>
+                  <h2 class="display-1 fw-bold">
+                    Get Started Digital Learning
+                  </h2>
                 </div>
                 <div>
                   <p>
@@ -546,6 +552,25 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <!-- Trusted by -->
+      <section class="container d-none d-md-block mb-5">
+        <h2 class="d-flex justify-content-center mb-5">
+          Trusted by over 800+ companies
+        </h2>
+        <div class="d-flex justify-content-between">
+          <img src="images/company/company-1.png" alt="" />
+
+          <img src="images/company/company-2.png" alt="" />
+
+          <img src="images/company/company-3.png" alt="" />
+
+          <img src="images/company/company-4.png" alt="" />
+
+          <img src="images/company/company-5.png" alt="" />
+
+          <img src="images/company/company-6.png" alt="" />
         </div>
       </section>
     </main>
