--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/72126e109c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Edtech site</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -556,7 +560,7 @@
       </section>
       <!-- Trusted by -->
       <section class="container d-none d-md-block mb-5">
-        <h2 class="d-flex justify-content-center mb-5">
+        <h2 class="d-flex justify-content-center display-3 fw-bold mb-5">
           Trusted by over 800+ companies
         </h2>
         <div class="d-flex justify-content-between">
@@ -573,6 +577,26 @@
           <img src="images/company/company-6.png" alt="" />
         </div>
       </section>
+      <!-- footer part -->
+      <footer class="bg-black pt-5 pb-5">
+        <h1 class="d-grid justify-content-center text-white">Edu Tech</h1>
+        <p class="d-grid justify-content-center text-white">
+          Office 41, Zawaya Buildin, Ghala Muscat,
+        </p>
+        <p class="d-grid justify-content-center text-white">
+          Sultanate of Oman
+        </p>
+        <p class="d-grid justify-content-center text-white">
+          Privacy Ploicy | Terms of use
+        </p>
+
+        <div class="container d-flex justify-content-center display-6 gap-3">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-github"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+        </div>
+      </footer>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
