--- a/index.html
+++ b/index.html
@@ -591,10 +591,18 @@
         </p>
 
         <div class="container d-flex justify-content-center display-6 gap-3">
-          <a href=""><i class="fa-brands fa-facebook"></i></a>
-          <a href=""><i class="fa-brands fa-github"></i></a>
-          <a href=""><i class="fa-brands fa-linkedin"></i></a>
-          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.facebook.com/pranta.sg/"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="https://github.com/pranta123443"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/mrityunjoy-sen-gupta-771701240/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://twitter.com/MrityunjoySenG5"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
         </div>
       </footer>
     </main>
