modify acordion heading added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+
     <script
       src="https://kit.fontawesome.com/72126e109c.js"
       crossorigin="anonymous"
@@ -436,6 +436,13 @@
       </section>
       <!-- accordion frequently asked questions -->
       <section class="container mb-5">
+        <h1 class="d-grid justify-content-center">
+          Frequently Asked Questions
+        </h1>
+        <p class="d-grid justify-content-center m-5">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout
+        </p>
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
