--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
               </li>
             </ul>
 
-            <form class="container-fluid justify-content-start">
+            <form
+              class="container-fluid justify-content-start d-flex justify-content-end"
+            >
               <button
                 class="btn btn-outline-primary border border-primary me-2"
                 type="button"
@@ -108,7 +110,7 @@
               />
               <div class="carousel-caption">
                 <div>
-                  <h2 class="display-1 fw-bold">
+                  <h2 class="mb-lg-5 display-5 fw-bold">
                     Get Started Digital Learning
                   </h2>
                 </div>
@@ -137,7 +139,7 @@
               />
               <div class="carousel-caption">
                 <div>
-                  <h2 class="display-1 fw-bold">
+                  <h2 class="mb-lg-5 display-5 fw-bold">
                     Get Started Digital Learning
                   </h2>
                 </div>
@@ -166,7 +168,7 @@
               />
               <div class="carousel-caption">
                 <div>
-                  <h2 class="display-1 fw-bold">
+                  <h2 class="mb-lg-5 display-5mb-lg-5 display-5 fw-bold">
                     Get Started Digital Learning
                   </h2>
                 </div>
@@ -389,7 +391,7 @@
           </div>
           <div>
             <button
-              class="btn btn-outline-primary text-white bg-primary border border-White me-2"
+              class="btn btn-outline-primary text-primary fw-bold bg-white border border-White me-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal"
               type="button"
@@ -439,10 +441,14 @@
         <h1 class="d-grid justify-content-center">
           Frequently Asked Questions
         </h1>
-        <p class="d-grid justify-content-center m-5">
+        <p class="d-grid justify-content-center">
           It is a long established fact that a reader will be distracted by the
           readable content of a page when looking at its layout
         </p>
+        <p class="d-grid justify-content-center mb-5">
+          content of a page when looking at its layout
+        </p>
+
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
@@ -583,6 +589,7 @@
 
           <img src="images/company/company-6.png" alt="" />
         </div>
+        <p class="text-white mt-5">.</p>
       </section>
       <!-- footer part -->
       <footer class="bg-black pt-5 pb-5">
