--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/72126e109c.js"
       crossorigin="anonymous"
     ></script>
-    <title>Edtech site</title>
+    <title>Edu Tech</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -108,12 +108,13 @@
                 class="d-block w-100"
                 alt="..."
               />
-              <div class="carousel-caption">
+              <div class="carousel-caption padding---section">
                 <div>
                   <h2 class="mb-lg-5 display-5 fw-bold">
                     Get Started Digital Learning
                   </h2>
                 </div>
+
                 <div>
                   <p>
                     Some representative placeholder content for the first slide.
