--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       <!-- another section card -->
       <section class="container">
         <div
-          class="d-flex justify-content-evenly align-items-center bg-primary rounded pt-5 pb-5 mb-5"
+          class="d-lg-flex justify-content-evenly align-items-center bg-primary rounded pt-5 pb-5 mb-5"
         >
           <div>
             <h1 class="text-white">Ready to Join</h1>
@@ -573,7 +573,7 @@
         </div>
       </section>
       <!-- Trusted by -->
-      <section class="container d-none d-md-block mb-5">
+      <section class="container d-none d-lg-block mb-5">
         <h2 class="d-flex justify-content-center display-3 fw-bold mb-5">
           Trusted by over 800+ companies
         </h2>
